dnl Process this file with autoconf to produce a configure script.
dnl
AC_REVISION($Revision: 1.16 $)
AC_PREREQ(2.52.20230114)

AC_INIT(initscan.c)
AC_CONFIG_HEADER(config.h:conf.in)

# This can be overridden, but makes --program-prefix default to "re", so
# it will install as "reflex".
program_prefix=re
AC_ARG_PROGRAM
CF_PROG_EXT

AC_LN_S
AC_PROG_YACC
CF_PROG_CC
AC_PROG_INSTALL

dnl These are standard among *NIX systems, but not when cross-compiling
AC_CHECK_TOOL(RANLIB, ranlib, ':')
AC_CHECK_TOOL(LD, ld, ld)
AC_CHECK_TOOL(AR, ar, ar)
CF_AR_FLAGS

CF_MAKE_TAGS
CF_PROG_LINT

CF_DISABLE_ECHO
AC_PROG_MAKE_SET

AC_CONST
AC_TYPE_SIZE_T

AC_CHECK_DECL(exit)

CF_XOPEN_SOURCE
CF_WITHOUT_X
CF_LOCALE
CF_WITH_WARNINGS

AC_HAVE_HEADERS(malloc.h)

case "$YACC" in
*bison*)
  AC_ALLOCA
  ;;
esac

CF_WITH_MAN2HTML     
CF_MANPAGE_FORMAT
CF_INSTALL_MAN

no_cross=
test "x$cross_compiling" = xno || no_cross="#"
AC_SUBST(no_cross)

AC_OUTPUT(Makefile)
CF_MAKE_DOCS(flex,1)
