dnl Copyright 2008-2024,2025 Thomas E. Dickey
dnl
dnl Permission is hereby granted, free of charge, to any person obtaining a
dnl copy of this software and associated documentation files (the
dnl "Software"), to deal in the Software without restriction, including
dnl without limitation the rights to use, copy, modify, merge, publish,
dnl distribute, distribute with modifications, sublicense, and/or sell
dnl copies of the Software, and to permit persons to whom the Software is
dnl furnished to do so, subject to the following conditions:
dnl
dnl The above copyright notice and this permission notice shall be included
dnl in all copies or portions of the Software.
dnl
dnl THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS
dnl OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
dnl MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
dnl IN NO EVENT SHALL THE ABOVE COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
dnl DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR
dnl OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR
dnl THE USE OR OTHER DEALINGS IN THE SOFTWARE.
dnl
dnl Except as contained in this notice, the name(s) of the above copyright
dnl holders shall not be used in advertising or otherwise to promote the
dnl sale, use or other dealings in this Software without prior written
dnl authorization.
dnl ---------------------------------------------------------------------------
dnl Process this file with autoconf to produce a configure script.
dnl
AC_REVISION($Revision: 1.20 $)
AC_PREREQ(2.52.20230114)

AC_INIT(initscan.c)
AC_CONFIG_HEADERS([config.h:conf.in])

CF_WITH_SYSTYPE

# This can be overridden, but makes --program-prefix default to "re", so
# it will install as "reflex".
program_prefix=re
AC_ARG_PROGRAM
CF_PROG_EXT

AC_PROG_LN_S
CF_PROG_CC
CF_PROG_INSTALL

dnl These are standard among *NIX systems, but not when cross-compiling
AC_CHECK_TOOL(RANLIB, ranlib, ':')
AC_CHECK_TOOL(LD, ld, ld)
AC_CHECK_TOOL(AR, ar, ar)
CF_AR_FLAGS

CF_MAKE_TAGS
CF_PROG_LINT

CF_DISABLE_ECHO
AC_PROG_MAKE_SET

AC_C_CONST
AC_TYPE_SIZE_T

AC_CHECK_DECL(exit)

CF_XOPEN_SOURCE
CF_WITHOUT_X
CF_LOCALE
CF_WITH_WARNINGS

AC_PROG_YACC

AC_CHECK_HEADERS(malloc.h)

case "$YACC" in
*bison*)
  AC_FUNC_ALLOCA
  ;;
esac

CF_WITH_MAN2HTML     
CF_MANPAGE_FORMAT
CF_INSTALL_MAN

no_cross=
test "x$cross_compiling" = xno || no_cross="#"
AC_SUBST(no_cross)

AC_OUTPUT(Makefile)
CF_MAKE_DOCS(flex,1)
